[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/enemy_slinger_hit.gd" type="Script" id=1]
[ext_resource path="res://Sprites/RangeYerli/yerli3AttigiTas.png" type="Texture" id=2]
[ext_resource path="res://SFX/Attack.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.899018, 0.77429 )

[node name="enemy1_slinger_hit" type="Area2D" groups=[
"EnemyHit",
]]
scale = Vector2( 0.32, 0.217032 )
collision_layer = 32768
collision_mask = 32768
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="destructor" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.60221, 2.32606 )
scale = Vector2( 5.21558, 4.50107 )
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="hit_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.722
pitch_scale = 4.0
[connection signal="area_entered" from="." to="." method="_on_enemy1_slinger_hit_area_entered" flags=3]
[connection signal="timeout" from="destructor" to="." method="_on_destructor_timeout" flags=3]
